# fqdt

./: Cargo.toml  README.md  dl.sh
.github/workflows/: build.yml
src/: api.rs  audio.rs  config.rs  download.rs  epub.rs  main.rs  types.rs
