[package]
name = "fqdt"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_json = "1"
indicatif = "0.17"
zip = { version = "2", default-features = false, features = ["deflate"] }
