[package]
name = "fqdt"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
minreq = { version = "2", features = ["https-rustls"] }
serde_json = "1"
indicatif = "0.17"
zip = { version = "2", default-features = false, features = ["deflate"] }
id3 = { version = "1", default-features = false }
